tests/ui/proc-macro/issue-75801.stderr
error[E0308]: mismatched types
  --> $DIR/issue-75801.rs:17:6
   |
LL |             let _bar: u32 = $arg;
   |                       --- expected due to this
...
LL | foo!("baz");
   |      ^^^^^ expected `u32`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
